2003-06-30  Robin Ericsson  <lobbin@localhost.nu>

	* plugins/text.plugin: Make it compile again.	

	* src/Makefile.am: Remove GTK_ENABLE_BROKEN=1

	* src/modules.c (plugin_clist_select_row_cb):
	Changed from GtkText to GtkTextView. 
	(do_plugin_information): Ditto.

	* src/modules_api.c [__MODULE__]: Remove define.

	* src/mudlist.c: Rewrote to use GtkTreeModel and
	GtkTextView instead of GtkTree and GtkText.  

2003-06-25  Jordi Mallach  <jordi@sindominio.net>

	* BUGS: Add a pointer to bugzilla.

	* configure.ac (AC_INIT): Remove BUG-REPORT argument.

	* gnome-mud.desktop.in: Add X-GNOME-Bugzilla entries.

2003-06-24  Jordi Mallach  <jordi@sindominio.net>

	* configure.ac (ALL_LINGUAS): Added "mk" (Macedonian).

	* src/bind.c (window_keybind): Replace gdk_window_raise() &
	gdk_window_show() with gtk_window_present().
	* src/modules.c (do_plugin_information): Likewise.
	* src/mudlist.c (window_mudlist): Likewise.
	* src/prefs.c (window_prefs): Likewise.
	* src/profiles.c (profilelist_dialog): Likewise.
	(window_profiles): Likewise.
	(window_profile_edit): Likewise.

2003-06-18  Fatih Demir <kabalak@gtranslator.org>

	* configure.ac: Added Turkish ("tr") to the languages' list and re-
		ordered the languages list there.

2003-06-18  Jordi Mallach  <jordi@sindominio.net>

	* src/init.c (window_menu_help_about): Check for an existing about
	window before doing anything. Fixes a crash when you try to open the
	about dialog multiple times.

2003-06-10  Jordi Mallach  <jordi@sindominio.net>

	* src/gnome-mud.c (main): Yet another embarrasing bugfix, initialize
	the gettext textdomain correctly, specifying UTF-8 as the codeset.

2003-06-09  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Update for 0.10.1.

	* configure.in: Bump version to 0.10.1, update LSMDATE.

2003-06-08  Jordi Mallach  <jordi@sindominio.net>

	* src/init.c (text_entry_key_press_cb): Patch from Robin to fix the
	PageUp/PageDown segfault, by using the Vte function instead of the
	scrolled_window one.