@@ -1,3 +1,9 @@
+2003-06-30  Abigail Brady  <morwen@evilmagic.org>
+
+	* src/telnet.c, src/init.c, src/gnome-mud.h: Fix telnet
+	handling to work if telnet sequences are split across
+	packets.
+
 2003-06-30  Robin Ericsson  <lobbin@localhost.nu>
 
 	* plugins/text.plugin: Make it compile again.	
